--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         </main>
     </div>
 
-    <script src="script-optimized.js"></script>
+    <script src="script-advanced.js"></script>
 </body>
 </html>
