--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
             </div>
         </header>
 
+        <div class="control-panel" id="control-panel">
+            <button id="random-mode-btn" class="btn">🎲 Chế độ ngẫu nhiên</button>
+            <button id="wrong-quiz-btn" class="btn">❌ Quiz câu sai (0)</button>
+            <button id="clear-wrong-btn" class="btn">🗑️ Xóa câu sai</button>
+            <div class="jump-to-question" id="jump-to-question">
+                <input type="number" id="jump-input" placeholder="Nhập số câu hỏi" min="1" max="477" value="">
+                <button id="jump-btn" class="btn">Nhảy tới</button>
+            </div>
+        </div>
+
         <main>
             <div class="quiz-container" id="quiz-container">
                 <div class="question-section">
